# novastor

./: .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  CLAUDE.md  Makefile  README.md  go.mod  go.sum  mkdocs.yml
.claude/agents/: architecture-compliance.md  gap-challenger.md  novastor-reviewer.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dependency-scan.yml  docs.yml  e2e.yaml  lvm-test.yaml  nightly.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
api/v1alpha1/: groupversion_info.go  types.go  zz_generated.deepcopy.go  zz_generated_deepcopy_manual.go
cmd/agent/: main.go
cmd/cli/: main.go
cmd/controller/: bootstrap.go  bootstrap_test.go  main.go
cmd/csi/: main.go
cmd/filer/: main.go
cmd/meta/: main.go
cmd/s3gw/: main.go
cmd/scheduler/: main.go  server.go
cmd/webhook/: main.go
config/crd/: novastor.io_backendassignments.yaml  novastor.io_blockvolumes.yaml  novastor.io_objectstores.yaml  novastor.io_sharedfilesystems.yaml  novastor.io_storagepools.yaml  novastor.io_storagequotas.yaml
config/rbac/: agent-clusterrole.yaml  agent-clusterrolebinding.yaml  agent-serviceaccount.yaml  controller-clusterrole.yaml  controller-clusterrolebinding.yaml  controller-serviceaccount.yaml  csi-clusterrole.yaml  csi-clusterrolebinding.yaml  csi-serviceaccount.yaml  kustomization.yaml  role.yaml
config/samples/: blockvolume.yaml  novastor_v1alpha1_storagequota.yaml  objectstore.yaml  pvc-block.yaml  sharedfilesystem.yaml  storagepool-erasurecoded.yaml  storagepool-erasurecoding.yaml  storagepool-replicated.yaml  storagepool-replication.yaml
dataplane/: .dockerignore  Cargo.toml  Dockerfile.build  Makefile  build.rs  entrypoint.sh  k8s-debug-pod.yaml  k8s-test-real-nvme.yaml  test_backends.sh  test_nvmeof.sh  test_real_nvme.sh
dataplane/docs/specs/: 2026-03-13-chunk-engine-redesign.md
dataplane/docs/superpowers/plans/: 2026-03-13-chunk-engine-plan-1-backend.md  2026-03-13-chunk-engine-plan-2-metadata.md  2026-03-13-chunk-engine-plan-3-transport.md
dataplane/nbd/: Cargo.toml
dataplane/nbd/src/: lib.rs  protocol.rs  server.rs
dataplane/nbd/tests/: server_test.rs
dataplane/ndp/: Cargo.toml
dataplane/ndp/src/: codec.rs  connection.rs  error.rs  header.rs  lib.rs  pool.rs
dataplane/ndp/tests/: codec_test.rs  connection_test.rs  header_test.rs
dataplane/nvmeof-tcp/: Cargo.toml
dataplane/nvmeof-tcp/src/: error.rs  lib.rs  pdu.rs  target.rs
dataplane/proto/: chunk_service.proto  dataplane_service.proto  raft_service.proto
dataplane/src/: config.rs  error.rs  lib.rs  main.rs  nvme_wrapper.c  spdk_wrapper.h  tracing_init.rs  uring_wrapper.c
dataplane/src/backend/: bdev_store.rs  chunk.rs  chunk_store.rs  file_store.rs  lvm.rs  mod.rs  raw_disk.rs  traits.rs
dataplane/src/bdev/: chunk_io.rs  erasure.rs  mod.rs  novastor_bdev.rs  novastor_replica_bdev.rs  replica.rs  sub_block.rs  write_buffer.rs
dataplane/src/chunk/: engine.rs  mod.rs  ndp_pool.rs  reactor_ndp.rs  sync.rs  write_cache.rs
dataplane/src/jsonrpc/: methods.rs  mod.rs  server.rs
dataplane/src/metadata/: crush.rs  mod.rs  raft_store.rs  raft_types.rs  shard.rs  store.rs  topology.rs  types.rs
dataplane/src/policy/: engine.rs  evaluator.rs  location_store.rs  mod.rs  operations.rs  types.rs
dataplane/src/spdk/: bdev_manager.rs  context.rs  env.rs  mod.rs  nvmf_manager.rs  reactor_dispatch.rs
dataplane/src/transport/: chunk_client.rs  chunk_service.rs  dataplane_service.rs  mod.rs  ndp_server.rs  raft_service.rs  server.rs
deploy/crds/: novastor.io_backendassignments.yaml  novastor.io_blockvolumes.yaml  novastor.io_objectstores.yaml  novastor.io_sharedfilesystems.yaml  novastor.io_storagepools.yaml  novastor.io_storagequotas.yaml
deploy/docker/: Dockerfile.dataplane
deploy/manifests/: scheduler.yaml
deploy/monitoring/: grafana-dashboard-agent.json  grafana-dashboard-overview.json  prometheus-rules.yaml
deploy/observability/: deploy.sh  grafana.yaml  pyroscope.yaml  tempo.yaml
docs/: csi-compliance.md  index.md  nfs-compliance.md  s3-api-compliance.md
frontend/: Cargo.toml  Dockerfile  build.rs
frontend/proto/: nvme.proto
frontend/src/: grpc_server.rs  main.rs  ndp_backend.rs  volume_manager.rs
hack/: boilerplate.go.txt
(+370 files in other folders)
