[package]
name = "novastor-dataplane"
version = "0.1.0"
edition = "2021"
description = "NovaStor SPDK-based data plane for high-performance block storage"
license = "Apache-2.0"

[features]
default = []
spdk-sys = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
reed-solomon-simd = "3"
crc32c = "0.6"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"] }
async-trait = "0.1"
ctrlc = "3"
hex = "0.4"
sha2 = "0.10"
openraft = { version = "0.9", features = ["serde"] }
redb = "3"
rand = { version = "0.8", features = ["small_rng"] }
base64 = "0.22"

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
