[package]
name = "ndp"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32c = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
futures = "0.3"
